--- a/packages/goodwe.yaml
+++ b/packages/goodwe.yaml
@@ -174,6 +174,7 @@ automation:
     trigger:
       - platform: state
         entity_id: sensor.grid_mode
+        from: '1'
         to: '0'
     condition:
       >
@@ -200,6 +201,7 @@ automation:
     trigger:
       - platform: state
         entity_id: sensor.grid_mode
+        from: '2' # only notify this if grid was lost. Sometimes inverter goes into mode 2 - "inverter abnormal stopping power"
         to: '1'
     condition:
       >
@@ -221,6 +223,31 @@ automation:
           target: ["#power-alerts"]
           message: >
             Eskom/Grid power returned
+  - alias: notification - grid power check
+    trigger:
+      - platform: state
+        entity_id: sensor.grid_mode
+        to: '2'
+    condition:
+      >
+        {{ trigger.from_state is not none and
+          trigger.from_state.state not in ['unknown','unavailable'] }}
+    action:
+      - service: notify.slack
+        data_template:
+          data:
+            icon: ":zap:"
+            username: "GoodWe Robot"
+            blocks_template:
+              - type: section
+                text:
+                  type: mrkdwn
+                  text: >
+                    Eskom/Grid stability check
+          title: 'Power'
+          target: ["#power-alerts"]
+          message: >
+            Eskom/Grid stability check
 
   # notification daily kWh usage
   - alias: notification daily kWh usage
