--- a/packages/goodwe_dod.yaml
+++ b/packages/goodwe_dod.yaml
@@ -113,7 +113,7 @@ automation:
         data: {}
     mode: single
 
-  ## 9% at 6amc
+  ## 9% at 5:30am
   - id: '1605879219606'
     alias: Goodwe DoD Morning
     description: Set max DoD in morning when day forecast more accurate
@@ -121,6 +121,10 @@ automation:
       - platform: time
         at: 05:30:00
     condition: []
+      # if loadshedding is below stage 5
+      #- condition: numeric_state
+      #  entity_id: sensor.eskom_loadshedding_stage
+      #  below: 5
     action:
       - service: solcast.update_forecast
         data: {}
@@ -142,13 +146,13 @@ automation:
             {% else %}1{% endif -%}
     mode: single
 
-  ## 9% at 10:30am
+  ## 9% at 9:00am
   - id: '1605879219607'
     alias: Goodwe DoD Day
     description: Set max DoD to 11% during the day - leave battery for evening use
     trigger:
       - platform: time
-        at: '10:30:00'
+        at: '9:00:00'
     condition: []
     action:
       - service: solcast.update_forecast
@@ -175,10 +179,6 @@ automation:
       - condition: numeric_state
         entity_id: sensor.goodwe_battery_soc
         above: '85'
-      # if loadshedding is below stage 5
-      - condition: numeric_state
-        entity_id: sensor.eskom_loadshedding_stage
-        below: 5
       # if battery SoH is above 50 for some safety
       - condition: numeric_state
         entity_id: sensor.goodwe_battery_soh
@@ -227,7 +227,7 @@ automation:
       #  to: 'on'
       - platform: numeric_state
         entity_id: sensor.eskom_loadshedding_stage
-        above: 2
+        above: 4
         for:
           minutes: 1
     condition:
