--- a/configuration.yaml
+++ b/configuration.yaml
@@ -27,6 +27,13 @@ scene: !include scenes.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
 
+# Global inputs
+input_boolean:
+  guest:
+    name: Guest mode
+  holiday:
+    name: Holiday mode
+
 # Devices
 camera: !include includes/camera.yaml
 ffmpeg:
@@ -58,3 +65,6 @@ alexa:
         - switch
         - light
 
+spotify:
+  client_id: 547f01bd9f9b490aaa40208c5a042862
+  client_secret: 9f7349e28d02412dbc3179f1885a0e92
