--- a/packages/goodwe_dod.yaml
+++ b/packages/goodwe_dod.yaml
@@ -119,7 +119,7 @@ automation:
     description: Set max DoD in morning when day forecast more accurate
     trigger:
       - platform: time
-        at: 05:30:00
+        at: 06:30:00
     condition: []
       # if loadshedding is below stage 5
       #- condition: numeric_state
@@ -243,11 +243,14 @@ automation:
     mode: single
 
   ## When less than 4 kWh left on solcat set 1%
-  - alias: Goodwe When less than 4 kWh left on solcat set 1%
+  - alias: Goodwe When less than 6 kWh left on solcat set 1%
     trigger:
       - platform: numeric_state
         entity_id: sensor.solcast_forecast
-        below: '4'
+        below: '6'
+      # also when geyser turn on in the morning
+      - platform: template
+        value_template: "{{ states('sensor.time') == (state_attr('input_datetime.main_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
     action:
       - service: input_number.set_value
         target:
