--- a/packages/geysers.yaml
+++ b/packages/geysers.yaml
@@ -105,7 +105,7 @@ automation:
         entity_id: timer.loadshedding_slot
         state: 'idle'
       - condition: template
-        value_template: "{{ '04:00' <= states('sensor.time') <= '06:00' and states('input_boolean.guest') == 'on' }}"
+        value_template: "{{ ('04:00' <= states('sensor.time') <= '06:00' and states('input_boolean.guest') == 'on') or ('17:00' <= states('sensor.time') < '20:00') }}"
     action:
       - service: timer.start
         data_template:
@@ -114,7 +114,7 @@ automation:
             {% set sensor_names = [ 'monday', 'tuesday', 'wednesday','thursday','friday','saturday','sunday'] %}
             {% set today_name = sensor_names[now().weekday()] %}
             {% if today_name == 'sunday_disable' %}{{ 300 | int * 60 }}
-            {% elif '17:00' <= states('sensor.time') <= '18:00' %}{{ 120 | int * 60 }}
+            {% elif '17:00' <= states('sensor.time') <= '19:00' %}{{ 120 | int * 60 }}
             {% else %}{{ 60 | int * 60 }}{% endif -%}
       - delay: '00:00:01' # Waits 1 seconds
       - service: switch.turn_on
